--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
             <button type="button" id="button1" onclick="alert('You pressed the button!')">Contact</button>
             </div>
             <div class="sec2">
-            <img src="images/Group 46.png" alt="Img1" height="90%" width="90%"><br>
-            <img src="images/Frame 58.png" alt="img2"  width="90%">
+            <img src="Group 46.png" alt="Img1" height="90%" width="90%"><br>
+            <img src="Frame 58.png" alt="img2"  width="90%">
         </div>
         </div>
     </header>
     <main>
         <div class="quote">
-            <img src="images/quote.png" id="img" alt="quote" height="70%" width="100%">
+            <img src="quote.png" id="img" alt="quote" height="70%" width="100%">
         </div>
         <div class="projects">
             <h2>#<span style="color:white;">Projects</span>------------------</h2>
             <div class="p_gallery">
                 <div class="card" >
-                    <img src="images/buzzbee.png" width="100%" height="260px">
+                    <img src="buzzbee.png" width="100%" height="260px">
                     <div class="card_skill">
                         <h3>Java XML Figma Firebase</h3>
                     </div>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="card" >
-                    <img src="images/mushychat.png" width="100%" height="260px">
+                    <img src="mushychat.png" width="100%" height="260px">
                     <div class="card_skill">
                         <h3>Java XML Figma Firebase</h3>
                     </div>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="card" >
-                    <img src="images/Qaukeitup.png" width="100%" height="260px">
+                    <img src="Qaukeitup.png" width="100%" height="260px">
                     <div class="card_skill">
                         <h3>html css javascript</h3>
                     </div>
@@ -183,7 +183,7 @@
                <button type="button" id="button1" onclick="alert('You pressed the button!')">Read More</button>
                </div>
                <div class="sec22">
-               <img src="images/Group 50.png">
+               <img src="Group 50.png">
            </div>
            </div>
         </div>
@@ -193,7 +193,7 @@
                 <div class="con1">
                     <h3>I’m interested in freelance opportunities. However, if you have other request or question, don’t hesitate to contact me</h3>
                 </div class="con2">
-                    <img src="images/Frame 33.png" width="30%" height="100%">
+                    <img src="Frame 33.png" width="30%" height="100%">
             </div>
         </div>
 
@@ -206,7 +206,7 @@
                 <h4>Android and Frontend Developer Based in Delhi,IN<br>Reach out to-mewarapranjal089@gmail.com</h4>
             </div>
             <div class="f2">
-                <img src="images/Group 23.png" alt="media icon">
+                <img src="Group 23.png" alt="media icon">
             </div>
         </div>
     </footer>
