--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
             <button type="button" id="button1" onclick="alert('You pressed the button!')">Contact</button>
             </div>
             <div class="sec2">
-            <img src="Group46.PNG" alt="Img1" height="90%" width="90%"><br>
-            <img src="Frame58.PNG" alt="img2"  width="90%">
+            <img src="Group 46.png" alt="Img1" height="90%" width="90%"><br>
+            <img src="Frame 58.png" alt="img2"  width="90%">
         </div>
         </div>
     </header>
     <main>
         <div class="quote">
-            <img src="quote.PNG" id="img" alt="quote" height="70%" width="100%">
+            <img src="quote.png" id="img" alt="quote" height="70%" width="100%">
         </div>
         <div class="projects">
             <h2>#<span style="color:white;">Projects</span>------------------</h2>
             <div class="p_gallery">
                 <div class="card" >
-                    <img src="buzzbee.PNG" width="100%" height="260px">
+                    <img src="buzzbee.png" width="100%" height="260px">
                     <div class="card_skill">
                         <h3>Java XML Figma Firebase</h3>
                     </div>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="card" >
-                    <img src="mushychat.PNG" width="100%" height="260px">
+                    <img src="mushychat.png" width="100%" height="260px">
                     <div class="card_skill">
                         <h3>Java XML Figma Firebase</h3>
                     </div>
@@ -91,7 +91,7 @@
                     </div>
                 </div>
                 <div class="card" >
-                    <img src="Qaukeitup.PNG" width="100%" height="260px">
+                    <img src="Qaukeitup.png" width="100%" height="260px">
                     <div class="card_skill">
                         <h3>html css javascript</h3>
                     </div>
@@ -183,7 +183,7 @@
                <button type="button" id="button1" onclick="alert('You pressed the button!')">Read More</button>
                </div>
                <div class="sec22">
-               <img src="Group50.PNG">
+               <img src="Group 50.png">
            </div>
            </div>
         </div>
@@ -206,7 +206,7 @@
                 <h4>Android and Frontend Developer Based in Delhi,IN<br>Reach out to-mewarapranjal089@gmail.com</h4>
             </div>
             <div class="f2">
-                <img src="Group23.PNG" alt="media icon">
+                <img src="Group 23.png" alt="media icon">
             </div>
         </div>
     </footer>
