--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <button type="button" id="button1" onclick="alert('You pressed the button!')">Contact</button>
             </div>
             <div class="sec2">
-            <img src="./Group 46.png" alt="Img1" height="90%" width="90%"><br>
+            <img src="https://pranjalmewaraa.github.io/Portfolio/Group 46.png" alt="Img1" height="90%" width="90%"><br>
             <img src="./Frame 58.png" alt="img2"  width="90%">
         </div>
         </div>
