--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
     <h2 id="mainh2"><span style="color:#00ff22">#</span>Completed Projects-<span style="color:#00ff22">Android</span></h2>
         <div class="container-1">
             <div class="card" >
-                <img src="images/buzzbee.png" width="100%" height="260px">
+                <img src="https://pranjalmewaraa.github.io/Portfolio/buzzbee.png" width="100%" height="260px">
                 <div class="card_skill">
                     <h3>Java XML Figma Firebase</h3>
                 </div>
