--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="card" >
-                <img src="images/mushychat.png" width="100%" height="260px">
+                <img src="https://pranjalmewaraa.github.io/Portfolio/mushychat.png" width="100%" height="260px">
                 <div class="card_skill">
                     <h3>Java XML Figma Firebase</h3>
                 </div>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="card" >
-                <img src="images/Qaukeitup.png" width="100%" height="260px">
+                <img src="https://pranjalmewaraa.github.io/Portfolio/Qaukeitup.png" width="100%" height="260px">
                 <div class="card_skill">
                     <h3>Java XML Figma Firebase USGS-API</h3>
                 </div>
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="card" >
-                <img src="images/buzzbee.png" width="100%" height="260px">
+                <img src="https://pranjalmewaraa.github.io/Portfolio/buzzbee.png" width="100%" height="260px">
                 <div class="card_skill">
                     <h3>html css javascript</h3>
                 </div>
@@ -136,7 +136,7 @@
                 <h4>Android and Frontend Developer Based in Delhi,IN<br>Reach out to-mewarapranjal089@gmail.com</h4>
             </div>
             <div class="f2">
-                <img src="images/Group 23.png" alt="media icon">
+                <img src="https://pranjalmewaraa.github.io/Portfolio/Group 23.png" alt="media icon">
             </div>
         </div>
     </footer>
