--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <meta name="author",content="enter-your-site-name">
     <meta name="", content="">
 
-    <title>Little Lemon</title>
+    <title>Projects</title>
     
 
    <!--Social media shared preview-->
