--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="author",content="enter-your-site-name">
     <meta name="", content="">
 
-    <title>Little Lemon</title>
+    <title>Contact</title>
     
 
    <!--Social media shared preview-->
@@ -75,7 +75,7 @@
                 <h4>Android and Frontend Developer Based in Delhi,IN<br>Reach out to-mewarapranjal089@gmail.com</h4>
             </div>
             <div class="f2">
-                <img src="images/Group 23.png" alt="media icon">
+                <img src="https://pranjalmewaraa.github.io/Portfolio/Group 23.png" alt="media icon">
             </div>
         </div>
     </div>
