--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author",content="enter-your-site-name">
     <meta name="", content="">
 
-    <title>Little Lemon</title>
+    <title>About</title>
     
 
    <!--Social media shared preview-->
@@ -56,7 +56,7 @@
             <button type="button" id="button1" onclick="alert('You pressed the button!')">Contact</button>
             </div>
             <div class="sec2">
-            <img src="images/Group 46.png" alt="Img1" height="" width="340px">
+            <img src="https://pranjalmewaraa.github.io/Portfolio/Group 46.png" alt="Img1" height="" width="340px">
         </div>
         </div>
     </header>
@@ -156,7 +156,7 @@
             </div>
         </div>
         <div class="fcon2">
-            <img src="images/Group 53.png" alt="ff">
+            <img src="https://pranjalmewaraa.github.io/Portfolio/Group 53.png" alt="ff">
         </div>
     </div>
     </main>
@@ -167,7 +167,7 @@
                 <h4>Android and Frontend Developer Based in Delhi,IN<br>Reach out to-mewarapranjal089@gmail.com</h4>
             </div>
             <div class="f2">
-                <img src="images/Group 23.png" alt="media icon">
+                <img src="https://pranjalmewaraa.github.io/Portfolio/Group 23.png" alt="media icon">
             </div>
         </div>
     </div>
