--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
         <h3>who am i?<br></h3>
         <div class="hcon"> 
         <div class="sec1">
-            <h2>Hello, i’m Elias!
+            <h2>Hello, i’m Pranjal!
                 <br><br>
-                I’m a self-taught front-end developer based in Kyiv, Ukraine. I can develop responsive websites from scratch and raise them into modern user-friendly web experiences. 
+                I’m a self-taught developer based in Delhi, India. I can develop responsive apps websites from scratch and raise them into modern user-friendly experiences. 
                 <br><br>
                 Transforming my creativity and knowledge into a websites has been my passion for over a year. I have been helping various clients to establish their presence online. I always strive to learn about the newest technologies and frameworks.
             </h2>
